<?xml version="1.0"?>
<package format="3">
  <name>yp_spur_ros2</name>
  <version>0.1.0</version>
  <description>ROS2 wrapper for ypspur-coordinator</description>
  <maintainer email="sopi@sopi.dev">sopi</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
